<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    android:background="@color/light_gray">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/llon">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/white"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_round_6"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/backrouddrawable"
                        android:orientation="horizontal"
                        android:paddingLeft="20dp"
                        android:paddingTop="10dp"
                        android:paddingRight="20dp"
                        android:paddingBottom="10dp">

                        <customfonts.TextViewSFProDisplayMedium
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center_vertical"
                            android:text="@string/wallet"
                            android:textColor="@color/white"
                            android:textSize="18sp" />

                        <customfonts.TextViewSFProDisplayMedium
                            android:id="@+id/saldo"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="1"
                            android:gravity="center_vertical|right"
                            android:textColor="@color/white"
                            android:textSize="18sp"
                            android:visibility="visible" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:id="@+id/topup"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/ictopup"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_topup"/>

                            <customfonts.TextViewSFProDisplayMedium
                                android:layout_below="@id/ictopup"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="Topup"
                                android:textColor="@color/white"
                                android:textSize="12dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/withdraw"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/icwithdraw"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_withdraw"/>

                            <customfonts.TextViewSFProDisplayMedium
                                android:layout_below="@id/icwithdraw"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="@string/withdraw"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/withdrawLinkAja"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">

                            <ImageView
                                android:id="@+id/icwithdrawLinkAja"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_withdraw"/>

                            <customfonts.TextViewSFProDisplayMedium
                                android:layout_below="@id/icwithdrawLinkAja"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="Tarik LinkAja"
                                android:textColor="@color/white"
                                android:textSize="12dp" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:id="@+id/detail"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center">
                            <ImageView
                                android:id="@+id/icdetail"
                                android:layout_width="match_parent"
                                android:layout_height="20dp"
                                android:src="@drawable/ic_detailwallet"/>

                            <customfonts.TextViewSFProDisplayMedium
                                android:layout_below="@id/icdetail"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_alignParentBottom="true"
                                android:layout_marginTop="5dp"
                                android:gravity="center"
                                android:text="@string/detail"
                                android:textColor="@color/white"
                                android:textSize="12sp" />
                        </RelativeLayout>

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:visibility="visible"
                android:id="@+id/orderan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:orientation="vertical"
                android:background="@color/white">

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/orderanmasuk"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"/>

                <com.facebook.shimmer.ShimmerFrameLayout
                    android:id="@+id/shimmerhomme"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical"
                    shimmer:duration="800">

                    <!-- Adding 7 rows of placeholders -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <include layout="@layout/shimmerorder" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="15dp" />

                        <include layout="@layout/shimmerorder" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="15dp" />

                        <include layout="@layout/shimmerorder" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="15dp" />

                        <include layout="@layout/shimmerorder" />

                    </LinearLayout>

                </com.facebook.shimmer.ShimmerFrameLayout>
            </LinearLayout>



        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

    <RelativeLayout
        android:id="@+id/rlnodata"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <ImageView
            android:id="@+id/nodataimage"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_centerInParent="true"
            android:src="@drawable/slide_one"
            android:visibility="gone"/>

        <customfonts.TextViewSFProDisplayMedium
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nodataimage"
            android:layout_centerInParent="true"
            android:text="@string/no_data"
            android:textColor="@color/black"
            android:textSize="20sp">

        </customfonts.TextViewSFProDisplayMedium>

    </RelativeLayout>
    <LinearLayout
        android:id="@+id/llon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:background="@color/white"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <customfonts.TextViewSFProDisplayMedium
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/current_status"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="15sp" />

                <customfonts.TextViewSFProDisplayRegular
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/set_open_or_close"
                    android:gravity="center_vertical"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textAlignment="center">

                <customfonts.Button_SF_Pro_Display_Medium
                    android:id="@+id/onoff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:background="@drawable/selector"
                    android:text="@string/wait"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>